refactor: migrate to java 17